name:                sealchain-script-runner
version:             0.0.1
synopsis:            Sealchain - Script Runner
description:         Sealchain - ScriptRunner
license:             MIT
license-file:        LICENSE
author:              IOHK
maintainer:          operations@iohk.io
copyright:           2018 SEAL
category:            Currency
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      common
  exposed-modules:      AutomatedTestRunner
                        BrickUI
                        BrickUITypes
                        NodeControl
                        OrphanedLenses
                        PocMode
                        Types
  default-language:    Haskell2010
  build-depends:        base
                      , aeson
                      , brick
                      , bytestring
                      , sealchain
                      , sealchain-chain
                      , sealchain-client
                      , sealchain-core
                      , sealchain-crypto
                      , sealchain-db
                      , sealchain-infra
                      , sealchain-networking
                      , sealchain-util
                      , conduit
                      , constraints
                      , containers
                      , data-default
                      , dns
                      , formatting
                      , lens
                      , lifted-async
                      , mtl
                      , optparse-applicative
                      , process
                      , resourcet
                      , serokell-util
                      , stm
                      , text
                      , time
                      , time-units
                      , turtle
                      , universum
                      , unix
                      , unordered-containers
                      , vector
                      , vty
                      , yaml
  ghc-options:         -Wall -Weverything
                       -Wno-unsafe -Wno-missing-import-lists
                       -O2

executable testcases
  main-is:              TestCases.hs
  other-modules:        BlockParser
  default-language:    Haskell2010
  build-depends:        base
                      , bytestring
                      , sealchain
                      , sealchain-binary
                      , sealchain-chain
                      , sealchain-core
                      , sealchain-db
                      , sealchain-infra
                      , sealchain-script-runner
                      , sealchain-util
                      , cborg
                      , constraints
                      , data-default
                      , formatting
                      , serokell-util
                      , text
                      , time-units
                      , turtle
                      , universum
  ghc-options:         -threaded -rtsopts
                       -Wall -Weverything
                       -Wno-unsafe -Wno-missing-import-lists
                       -O2
