name:                sealchain-utxo
version:             0.0.1
synopsis:            Abstract definitions of UTxO based accounting
-- description:
license:             MIT
license-file:        LICENSE
copyright:           2018 SEAL
category:            Testing
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     
                      --  UTxO.DSL
                      --  UTxO.Bootstrap
                      --  UTxO.Context
                      --  UTxO.Crypto
                      --  UTxO.Generator
                      --  UTxO.IntTrans
                      --  UTxO.Translate
                       UTxO.Util
                      --  UTxO.Verify

                      --  Data.Validated
  -- other-modules:
  build-depends:       base >=4.10 && <4.12
                     , QuickCheck
                     , sealchain
                     , sealchain-binary
                     , sealchain-chain
                     , sealchain-chain-test
                     , sealchain-client
                     , sealchain-core
                     , sealchain-core-test
                     , sealchain-crypto
                     , sealchain-db
                     , sealchain-util
                     , constraints
                     , containers
                     , cryptonite
                     , data-default >= 0.7
                     , formatting
                     , lens
                     , mtl
                     , reflection >= 2.1
                     , safecopy
                     , serokell-util
                     , universum
                     , unordered-containers
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions: BangPatterns
                      ConstraintKinds
                      DeriveGeneric
                      FlexibleContexts
                      FlexibleInstances
                      GADTs
                      InstanceSigs
                      LambdaCase
                      MultiParamTypeClasses
                      MultiWayIf
                      NoImplicitPrelude
                      OverloadedStrings
                      RankNTypes
                      RecordWildCards
                      ScopedTypeVariables
                      StandaloneDeriving
                      TypeFamilies
