name:                sealchain-binary-test
version:             0.0.1
synopsis:            Sealchain - binary serializarion (tests)
description:         This package contains test helpers for sealchain-binary.
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2018 SEAL
category:            Currency
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
                       Test.Pos.Binary.Helpers
                       Test.Pos.Binary.Helpers.GoldenRoundTrip
                       Test.Pos.Cbor.Canonicity
                       Test.Pos.Cbor.RefImpl

  build-depends:       QuickCheck
                     , base
                     , bytestring
                     , sealchain-binary
                     , sealchain-util-test
                     , cborg
                     , cereal
                     , containers
                     , formatting
                     , half
                     , hedgehog
                     , hspec
                     , mtl
                     , pretty-show
                     , quickcheck-instances
                     , safecopy
                     , serokell-util
                     , text
                     , universum

  default-language:    Haskell2010

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       DeriveFunctor
                       DeriveFoldable
                       DeriveTraversable
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring
                       GADTs

  ghc-options:         -Wall
                       -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
