name:                sealchain-crypto-test
version:             0.0.1
synopsis:            Sealchain - arbitrary instances for sealchain-crypto
description:         This package contains arbitrary instances for the cryptography primitives used in Sealchain.
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2016 IOHK
category:            Currency
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
                       Test.Pos.Crypto.Arbitrary
                       Test.Pos.Crypto.Bi
                       Test.Pos.Crypto.Dummy
                       Test.Pos.Crypto.Example
                       Test.Pos.Crypto.Gen
                       Test.Pos.Crypto.Json

  other-modules:
                       Test.Pos.Crypto.Arbitrary.Unsafe


  build-depends:       QuickCheck
                     , base
                     , bytestring
                     , cardano-crypto
                     , sealchain-binary
                     , sealchain-binary-test
                     , sealchain-crypto
                     , sealchain-util
                     , sealchain-util-test
                     , cryptonite
                     , generic-arbitrary
                     , hedgehog
                     , memory
                     , quickcheck-instances
                     , universum

  default-language:    Haskell2010

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring

  ghc-options:         -Wall
                       -O2
