name:                sealchain-db-test
version:             0.0.1
synopsis:            Sealchain - arbitrary instances for sealchain-db
description:         Sealchain - arbitrary instances for sealchain-db
license:             MIT
license-file:        LICENSE
copyright:           2018 SEAL
category:            Currency
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
                       Test.Pos.DB.Update.Arbitrary
                       Test.Pos.DB.Block.Arbitrary

  other-modules:
                       Test.Pos.DB.Update.Arbitrary.Poll
                       Test.Pos.DB.Update.Arbitrary.MemState

  build-depends:       QuickCheck
                     , base
                     , sealchain-binary
                     , sealchain-chain
                     , sealchain-chain-test
                     , sealchain-core-test
                     , sealchain-crypto-test
                     , sealchain-db
                     , sealchain-util-test
                     , generic-arbitrary
                     , universum
                     , unordered-containers

  default-language:    Haskell2010

  ghc-options:         -Wall
                       -fno-warn-orphans
                       -O2
