name:                sealchain-infra-test
version:             0.0.1
synopsis:            Sealchain - generators for sealchain-infra
description:         This package contains generators for the infrastructural data types used in Sealchain.
license:             MIT
license-file:        LICENSE
copyright:           2018 SEAL
category:            Currency
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
                       Test.Pos.Infra.Arbitrary
                       Test.Pos.Infra.Arbitrary.Communication
                       Test.Pos.Infra.Arbitrary.Slotting
                       Test.Pos.Infra.Arbitrary.Ssc
                       Test.Pos.Infra.Arbitrary.Txp
                       Test.Pos.Infra.Arbitrary.Update
                       Test.Pos.Infra.Bi
                       Test.Pos.Infra.Diffusion.Subscription.StatusSpec
                       Test.Pos.Infra.Diffusion.Subscription.SubscriptionSpec
                       Test.Pos.Infra.Gen
                       Test.Pos.Infra.Json

  build-depends:       QuickCheck
                     , async
                     , base
                     , bytestring
                     , sealchain-binary-test
                     , sealchain-chain
                     , sealchain-chain-test
                     , sealchain-core
                     , sealchain-core-test
                     , sealchain-crypto
                     , sealchain-crypto-test
                     , sealchain-infra
                     , sealchain-networking
                     , sealchain-util-test
                     , containers
                     , dns
                     , generic-arbitrary
                     , hedgehog
                     , hspec
                     , iproute
                     , kademlia
                     , universum
                     , yaml

  default-language:    Haskell2010

  ghc-options:         -Wall
                       -O2
                       -threaded

  default-extensions:  NoImplicitPrelude
