name:                sealchain-util-test
version:             0.0.1
synopsis:            Sealchain - general utilities (tests)
description:         QuickCheck Arbitrary instances for the Sealchain general
                     utilities package.
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2018 SEAL
category:            Currency
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
                       Test.Pos.Util.Base16
                       Test.Pos.Util.Gen
                       Test.Pos.Util.Golden
                       Test.Pos.Util.Modifier
                       Test.Pos.Util.Orphans
                       Test.Pos.Util.Parallel.Parallelize
                       Test.Pos.Util.QuickCheck
                       Test.Pos.Util.QuickCheck.Property
                       Test.Pos.Util.QuickCheck.Arbitrary
                       Test.Pos.Util.Tripping

  build-depends:       QuickCheck
                     , aeson
                     , aeson-pretty
                     , attoparsec
                     , base
                     , base16-bytestring
                     , bytestring
                     , canonical-json
                     , sealchain-util
                     , cereal
                     , cryptonite
                     , directory
                     , file-embed
                     , filepath
                     , formatting
                     , hedgehog
                     , hspec
                     , mtl
                     , pretty-show
                     , quickcheck-instances
                     , safecopy
                     , template-haskell
                     , text
                     , time-units
                     , universum
                     , unordered-containers
                     , yaml

  default-language:    Haskell2010

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       DeriveFunctor
                       DeriveFoldable
                       DeriveTraversable
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring
                       GADTs

  ghc-options:         -Wall
                       -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
